# VoigtGPU

./: .gitignore  CMakeLists.txt  Makefile  VoigtGPU.h
source/: CMakeLists.txt  Makefile  VoigtDevice.h  VoigtFunctions.h  VoigtKernels.h  VoigtKernelsTest.cpp  VoigtKernelsTest.cu  VoigtThurst.h
